test/grammar/types/literal/lit_err_01_bool_01/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:5:5
  |
5 |     bool_01 = False
  |     ^ expected bool(True), got bool(False)
  |
 --> ${CWD}/main.k:2:5
  |
2 |     bool_01: True
  |     ^ variable is defined here, its type is bool(True), but got bool(False)
  |